# backend.completeautomate

./: .flake8  .gitignore  Guideance.md  Makefile  README.md  main.ipynb  main.py  pyproject.toml  tox.ini
backend/: app_service.py
backend/config/: enum.py  env.py
backend/services/agent/: backend_agent.py  base_agent.py  coder_agent.py  frontend_agent.py  graphic_designer_agent.py  image_agent.py  manager_agent.py  planner_agent.py  researcher_agent.py  script_writer_agent.py  scrum_master_agent.py  social_media_agent.py
backend/services/ai/: anthropic_ai.py  chat_x_ai.py  deepseek_ai.py  deepseek_service.py  grok_ai.py  grok_service.py  groq_ai.py  open_ai.py  open_ai_service.py  perplexity_ai.py
backend/services/aws/: command_db.py  dynamo_database.py  message_db.py  s3_storage.py  secret.py  session.py  task_db.py
backend/services/data/: enum.py  message.py
backend/services/helper/system_prompt/: system_prompt_helper.py
backend/services/helper/system_prompt/templates/: core_values.html  responsibility.html
backend/services/output/: planner_tasks.json
backend/services/task/: human_input_task.py  new_idea_task.py  pending_task.py  researcher_task.py  script_task.py  scrum_master_task.py  start_new_task.py
backend/services/text_to_speech/: resemble_service.py  text_to_speech_service.py
backend/services/tool/: command_tool.py  file_tool.py
backend/services/utility/: company_detail_utility.py  company_value_utility.py  system_prompt_utility.py
backend/services/utility/system_prompt/: system_prompt_utility.py
backend/services/utility/system_prompt/templates/: base_text.txt  core_values.txt  responsibility.html  responsibility.txt  team_details.txt
backend/services/workflow/: frontend_development_workflow.py
backend/services/youtube/: youtube_channel.py  youtube_video.py
tests/: test_file_tool.py  test_frontend_agent.py
