[tool.poetry]
name = "backend-completeautomate"
version = "0.0.1"
description = ""
authors = ["Vimal Menon"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.13"
resemble = "^1.7.0"
langchain = "^1.2.0"
langchain-deepseek = "^1.0.1"
langchain-groq = "^1.1.1"
langchain-openai = "^1.1.6"
langchain-xai = "^1.2.0"
jinja2 = "^3.1.6"
boto3 = "^1.42.21"
langchain-perplexity = "^1.1.0"
langgraph = "^1.0.5"

[tool.poetry.scripts]
app = "main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
