[tool.poetry]
name = "backend-completeautomate"
version = "0.0.1"
description = ""
authors = ["Vimal Menon"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.13"
resemble = "^1.7.0"
langchain-deepseek = "^1.0.1"
langchain-groq = "^1.1.1"
langchain-openai = "^1.1.6"
langchain-xai = "^1.2.0"
jinja2 = "^3.1.6"
boto3 = "^1.42.21"
langchain-perplexity = "^1.1.0"
langgraph = "^1.0.5"
langsmith = "^0.6.1"
langchain = "^1.2.1"
langchain-anthropic = "^1.3.1"
pydantic = "^2.12.5"

[tool.poetry.scripts]
app = "main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
boto3-stubs = "^1.42.27"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
