[tool.poetry]
name = "backend-completeautomate"
version = "0.0.1"
description = ""
authors = ["Vimal Menon"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.13"
resemble = "^1.7.0"
langchain-deepseek = "^1.0.1"
langchain-groq = "^1.1.1"
langchain-openai = "^1.1.6"
langchain-xai = "^1.2.0"
jinja2 = "^3.1.6"
boto3 = "^1.42.21"
langchain-perplexity = "^1.1.0"
langgraph = "^1.0.5"
langsmith = "^0.6.1"
langchain = "^1.2.1"
langchain-anthropic = "^1.3.1"
pydantic = "^2.12.5"
ipython = "^9.9.0"

[tool.poetry.scripts]
app = "main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
boto3-stubs = "^1.42.27"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^24.0.0"
flake8 = "^7.0.0"
tox = "^4.11.0"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_anthropic.*",
    "langchain_deepseek.*",
    "langchain_groq.*",
    "langchain_openai.*",
    "langsmith.*",
    "langgraph.*",
    "boto3.*",
    "resemble.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
